--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@types/uuid": "^8.3.4",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.3.1",
-    "ts-jest": "^28.0.7",
-    "typescript": "^4.7.4"
+    "ts-jest": "^28.0.8",
+    "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@jest/globals": "^29.4.1"
   }
 }
