--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,26 @@
 {
   /* Base configuration. Do not edit this field. */
-  "extends": "./temp/tsconfig.cocos.json",
+  // "extends": "./temp/tsconfig.cocos.json",
 
   /* Add your custom configuration here. */
   "compilerOptions": {
+    "target": "es2022",                    /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "module": "es2022",                    /* Specify what module code is generated. */
     "types": ["jest", "node"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": { /* Specify a set of entries that re-map imports to additional lookup locations. */
+    "db:\/\/*": [
+        "C:\\Work\\lux-gaming-gameclient\\*"
+      ],
+      "cc": [
+        "C:\\Work\\lux-gaming-gameclient\\Test\\TestSuite\\EngineModuleMocks\\cc.ts"
+      ],
+      "^cc/env$": [
+        "C:\\Work\\lux-gaming-gameclient\\Test\\TestSuite\\EngineModuleMocks\\cc\\env.ts"
+      ],
+      // "cc": [
+      //   "C:\\CocosDashboard_1.2.3\\resources\\.editors\\Creator\\3.4.0\\resources\\resources\\3d\\engine\\bin\\.declarations\\cc.d.ts"
+      // ]
+    },
   }
 }
